<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ High Performance Knowledge Based Configuration Techniques
  ~
  ~ Copyright (c) 2022-2023
  ~
  ~ @author: Viet-Man Le (vietman.le@ist.tugraz.at)
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.tugraz.ist.ase.hiconfit</groupId>
    <artifactId>hiconfit-core</artifactId>
    <packaging>pom</packaging>
    <version>0.1.1-alpha-03</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
        <artifact.version>0.1.1-alpha-03</artifact.version>
        <fm.gen.version>1.3</fm.gen.version>
        <kbstatistic.version>1.3.1</kbstatistic.version>
    </properties>

    <modules>
        <module>common-package</module>
        <module>csp2choco-package</module>
        <module>fm-package</module>
        <module>eval-package</module>
        <module>kb-package</module>
        <module>cdrmodel-package</module>
        <module>ca-cdr-package</module>
        <module>configurator-package</module>
        <module>heuristics-package</module>
        <module>fma-package</module>
    </modules>

    <profiles>
        <profile>
            <id>apps</id>
            <modules>
                <module>app-KBStatistics</module>
                <module>app-FMGenerator</module>
            </modules>
        </profile>

        <profile>
            <id>github-maven-repository</id>
            <repositories>
                <repository>
                    <id>github-maven-repository</id>
                    <url>https://maven.pkg.github.com/HiConfiT/*</url>
                </repository>
            </repositories>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>
        </plugins>
    </build>

    <developers>
        <developer>
            <id>manleviet</id>
            <name>Viet-Man Le</name>
            <email>vietman.le@ist.tugraz.at</email>
            <url>https://github.com/manleviet</url>
        </developer>
        <developer>
            <id>tamim.burgstaller</id>
            <name>Tamim Burgstaller</name>
            <email>vietman.le@ist.tugraz.at</email>
            <url>https://github.com/manleviet</url>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>github-maven-repository</id>
            <name>hiconfit-core</name>
            <url>https://maven.pkg.github.com/HiConfiT/hiconfit-core</url>
        </repository>
    </distributionManagement>

</project>